force-app/main/default/objects/Informe_estrategico__c/Informe_estrategico__c.object-meta.xml
<CustomObject>
    <label>Informe estratégico</label>
    <nameField>
        <displayFormat>informe estratégico-{00000}</displayFormat>
        <label>Nombre de Informe estratégico</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Informes estratégicos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>