force-app/main/default/objects/Informe_estrategico__c/fields/Absolucion_de_posiciones__c.field-meta.xml
<CustomField>
    <fullName>Absolucion_de_posiciones__c</fullName>
    <inlineHelpText>Campo tipo  texto  (255 caracteres limite) del objeto Informe estratégico</inlineHelpText>
    <label>Absolución de posiciones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>