force-app/main/default/objects/Informe_estrategico__c/fields/Absolucion_de_posiciones_deman__c.field-meta.xml
<CustomField>
    <fullName>Absolucion_de_posiciones_deman__c</fullName>
    <label>Absolución de posiciones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>