force-app/main/default/objects/Informe_estrategico__c/fields/Apoderado_AS__c.field-meta.xml
<CustomField>
    <fullName>Apoderado_AS__c</fullName>
    <formula>Caso__r.Corresponsal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apoderado AS</label>
    <type>Text</type>
</CustomField>