force-app/main/default/objects/Informe_estrategico__c/fields/Autos__c.field-meta.xml
<CustomField>
    <fullName>Autos__c</fullName>
    <formula>Caso__r.Autos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Autos</label>
    <type>Text</type>
</CustomField>