force-app/main/default/objects/Informe_estrategico__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Informes estratégicos</relationshipLabel>
    <relationshipName>Informes_estrategicos</relationshipName>
    <type>Lookup</type>
</CustomField>