force-app/main/default/objects/Informe_estrategico__c/fields/Documental__c.field-meta.xml
<CustomField>
    <fullName>Documental__c</fullName>
    <label>Documental</label>
    <length>255</length>
    <type>Text</type>
</CustomField>