force-app/main/default/objects/Informe_estrategico__c/fields/Estados_procesales__c.field-meta.xml
<CustomField>
    <fullName>Estados_procesales__c</fullName>
    <description>Campo tipo área de texto largo (3200 caracteres limite) del objeto Informe estratégico</description>
    <label>Estados procesales</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>