force-app/main/default/objects/Informe_estrategico__c/fields/Estrategia_legal__c.field-meta.xml
<CustomField>
    <fullName>Estrategia_legal__c</fullName>
    <description>Campo tipo área de texto largo (3200 caracteres limite) del objeto Informe estratégico</description>
    <label>Estrategia legal</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>