force-app/main/default/objects/Informe_estrategico__c/fields/Expediente_legal__c.field-meta.xml
<CustomField>
    <fullName>Expediente_legal__c</fullName>
    <formula>Caso__r.N_Expte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expediente legal</label>
    <type>Text</type>
</CustomField>