force-app/main/default/objects/Informe_estrategico__c/fields/informativa__c.field-meta.xml
<CustomField>
    <fullName>informativa__c</fullName>
    <description>Campo tipo  texto  (255 caracteres limite) del objeto Informe estratégico</description>
    <label>informativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>