force-app/main/default/objects/Informe_estrategico__c/fields/Informativa_demandado__c.field-meta.xml
<CustomField>
    <fullName>Informativa_demandado__c</fullName>
    <label>Informativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>