force-app/main/default/objects/Informe_estrategico__c/fields/Otras_demandado__c.field-meta.xml
<CustomField>
    <fullName>Otras_demandado__c</fullName>
    <label>Otras</label>
    <length>255</length>
    <type>Text</type>
</CustomField>