force-app/main/default/objects/Informe_estrategico__c/fields/Parte_actora_Denunciante__c.field-meta.xml
<CustomField>
    <fullName>Parte_actora_Denunciante__c</fullName>
    <formula>Caso__r.Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parte actora/Denunciante</label>
    <type>Text</type>
</CustomField>