force-app/main/default/objects/Informe_estrategico__c/fields/Parte_demandada__c.field-meta.xml
<CustomField>
    <fullName>Parte_demandada__c</fullName>
    <description>Campo tipo texto 255 caract.  del objeto Informe Estrategico</description>
    <label>Parte demandada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>