force-app/main/default/objects/Informe_estrategico__c/fields/Pericial__c.field-meta.xml
<CustomField>
    <fullName>Pericial__c</fullName>
    <inlineHelpText>Campo tipo  texto  (255 caracteres limite) del objeto Informe estratégico</inlineHelpText>
    <label>Pericial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>