force-app/main/default/objects/Informe_estrategico__c/fields/Pericial_demandado__c.field-meta.xml
<CustomField>
    <fullName>Pericial_demandado__c</fullName>
    <label>Pericial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>