force-app/main/default/objects/Informe_estrategico__c/fields/Posibilidad_de_condena__c.field-meta.xml
<CustomField>
    <fullName>Posibilidad_de_condena__c</fullName>
    <description>Campo tipo área de texto largo (3200 caracteres limite) del objeto Informe estratégico</description>
    <label>Posibilidad de condena</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>