force-app/main/default/objects/Informe_estrategico__c/fields/Pruebas_ofrecidas_Resultados__c.field-meta.xml
<CustomField>
    <fullName>Pruebas_ofrecidas_Resultados__c</fullName>
    <description>Campo tipo área de texto largo (3200 caracteres limite) del objeto Informe estratégico</description>
    <label>Pruebas ofrecidas/Resultados</label>
    <length>322</length>
    <type>LongTextArea</type>
</CustomField>