force-app/main/default/objects/Informe_estrategico__c/fields/Resumen_del_caso__c.field-meta.xml
<CustomField>
    <fullName>Resumen_del_caso__c</fullName>
    <description>Campo tipo texto largo (3200 caracteres limite) del objeto Informe estratégico</description>
    <label>Resumen del caso</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>