force-app/main/default/objects/Informe_estrategico__c/fields/Sentencia_Recursos__c.field-meta.xml
<CustomField>
    <fullName>Sentencia_Recursos__c</fullName>
    <description>Campo tipo área de texto largo (3200 caracteres limite) del objeto Informe estratégico</description>
    <label>Sentencia/Recursos</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>