force-app/main/default/objects/Informe_estrategico__c/fields/Testimonial__c.field-meta.xml
<CustomField>
    <fullName>Testimonial__c</fullName>
    <description>Campo tipo  texto  (255 caracteres limite) del objeto Informe estratégico</description>
    <label>Testimonial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>