force-app/main/default/objects/Informe_estrategico__c/fields/Testimonial_demandado__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_demandado__c</fullName>
    <label>Testimonial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>