force-app/main/default/objects/Informe_estrategico__c/fields/Tribunal_Organismo__c.field-meta.xml
<CustomField>
    <fullName>Tribunal_Organismo__c</fullName>
    <formula>TEXT(Caso__r.Organismo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tribunal/Organismo</label>
    <type>Text</type>
</CustomField>